[package]
name = "rtun"
version = "0.1.0"
edition = "2021"
authors = ["Anderson Cancado <andycancado@gmail.com>"]

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
futures = "0.3.30"
signal-hook = "0.3.17"
signal-hook-tokio = "0.3.1"
tokio = { version = "1.38.0", features = ["full"] }
tokio-process = "0.2.5"
tokio-stream = { version = "0.1.15", features = ["signal"] }
